internal/webserver/static/styles.css
/* ... */
ul.inline-dotted-list {
    list-style: none;
    margin: 0;
}
ul.inline-dotted-list li {
    display: inline;
}
ul.inline-dotted-list li:after {
    content: " ⋅";
}
ul.inline-dotted-list li:last-child:after {
    content: "";
}

.tweet {
    padding: 0 1.5em;
}
:not(#focused-tweet) > .tweet {
    cursor: pointer;
}

.quoted-tweet {
    margin: 1em 0;
}

.rounded-gray-outline {
    outline-color: lightgray;
    outline-style: solid;
    outline-width: 1px;
    border-radius: 20px;
}

.profile-banner-image {
    width: 100%;
}

.unstyled-link {
    text-decoration: none;
    color: inherit;
}

.author-info {
    display: flex;
    align-items: center;
}
.author-info a {
    line-height: 0;
}

.author-info, .tweet .text {
    cursor: default;
}

.circle-outline {
    display: flex;
    border-radius: 50%;
    outline: 1px solid #777;
    margin: 0 0.4em;
    font-size: 0.8em;
    padding: 0.2em;
    box-sizing: border-box;
}

.name-and-handle {
    padding: 0 0.6em !important; /* !important to make the ".quick-link .span" rule in the login button not overrule it */
}

.display-name {
    font-weight: bold;
    white-space: nowrap;
}
.handle {
    color: var(--color-twitter-text-gray);
}

.tweet-header-container {
    display: flex;
    align-items: center;
}
.reply-mentions-container {
    display: flex;
    align-items: center;
    margin: 0 5em;
    cursor: default;
}
.reply-mentions {
    padding: 0 0.5em;
}

.replying-to-label {
    color: var(--color-twitter-text-gray);
}
a.entity {
    text-decoration: none;
    color: var(--color-twitter-blue);
}

.tweet .text {
    display: block;
    margin-bottom: 0.4em;
    margin-top: 0;
}
#focused-tweet .text {
    font-size: 1.4em;
}
#focused-tweet .quoted-tweet .text {
    font-size: unset;
}
.tweet-content video {
    max-width: 100%;
    max-height: 40em;
}
.embedded-link {
    padding: 1.3em;
    margin-top: 1em;
    display: flex;
    flex-direction: column;
    background-color: var(--color-twitter-off-white);
}
img.embedded-link-preview {
    border-radius: 1em;
    max-width: 100%;
}
.embedded-link-description {
    color: var(--color-twitter-text-gray);
    font-size: 0.8em;
    margin: 0;
}
h3 {
    margin: 0.5em 0;
}
.embedded-link-domain-container {
    margin-top: 0.2em
}
.embedded-link-domain {
    margin-left: 0.3em;
}
.thread-parent-tweet:first-child, #focused-tweet:first-child {
    padding-top: 1em;
}
.thread-parent-tweet .vertical-reply-line-container,
.reply-chain .vertical-reply-line-container {
    width: 3em;
    margin-right: 0.5em;
}
.thread-parent-tweet .vertical-reply-line:not(.quoted-tweet .vertical-reply-line),
.reply-chain > :not(:last-child) .vertical-reply-line:not(.quoted-tweet .vertical-reply-line) {
    width: 2px;
    background-color: var(--color-twitter-off-white-dark);
    flex-grow: 1;
    margin: auto;
}

.profile-image {
    border-radius: 50%;
    width: 3em;
    display: inline;
    border: 1px solid var(--color-outline-gray);
}

.user-feed-header {
    border-bottom: 1px solid var(--color-outline-gray);
}
.user-feed-header .author-info {
    font-size: 1.3em;
    padding: 1em;
}
.user-feed-header .profile-image {
    width: 8em;
}
.user-feed-header a.user-feed-tab {
    flex-grow: 1;
    text-align: center;
    font-size: 1.1em;
    font-weight: bold;
    color: var(--color-twitter-text-gray);
    padding: 0.8em;
}
.user-feed-header a.user-feed-tab.active-tab {
    color: var(--color-twitter-blue);
    border-bottom: 0.2em solid var(--color-twitter-blue);
}
.user-feed-header a.user-feed-tab:hover {
    color: var(--color-twitter-blue);
}

.row {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.vertical-reply-line-container {
    flex-grow: 0;
    flex-shrink: 0;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-self: stretch;
    width: 1em; /* will be overridden by, e.g., parent-thread properties */
}
.vertical-container-1 {
    flex-grow: 1;
    flex-shrink: 1;
}

.posted-at-container {
    flex-grow: 1;
    min-width: 5em;
}
p.posted-at {
    float: right;
    color: var(--color-twitter-text-gray);
    font-size: 0.875em;
}

.interactions-bar {
    display: flex;
    flex-direction: row;
    margin: 0.5em 0;
}
.interaction-stat {
    flex-grow: 1;
    display: flex;
}
.interaction-stat span {
    line-height: 1.5em;
    padding: 0 0.5em;
}
.interactions-bar .dummy {
    flex-grow: 5;
}

#focused-tweet {
    border-bottom: 1px solid var(--color-twitter-off-white-dark);
    padding-bottom: 0.5em;
}


.reply-chain {
    margin-top: 1em;
}
.reply-chain > :last-child {
    padding-bottom: 1em;
    border-bottom: 1px solid var(--color-twitter-off-white-dark);
}
.nav-sidebar {
    display: flex;
    flex-direction: column;
    position: fixed;
    transform: translate(-100%, 0);
    font-size: 1.4em;
}
ul.quick-links {
    display: flex;
    flex-direction: column;
    list-style: none;
    align-items: flex-start;
    padding: 0 2em;
}
.quick-link {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0.5em;
    margin: 0.2em;
    border-radius: 100em; /* any large amount, just don't use % because then it makes an ellipse */
    cursor: pointer;
}
.quick-link:hover {
    background-color: var(--color-twitter-blue-light);
}
.quick-link:active {
    transform: translate(0.1em, 0.1em);
    background-color: var(--color-twitter-blue);
}

.quick-link span {
    padding: 0 0.3em;
    white-space: nowrap;
}

.followers-count, .following-count {
    font-weight: bold;
}
.followers-label, .following-label {
    color: var(--color-twitter-text-gray);
}
.bio-info-with-icon {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.3em;
}
.user-feed-header-info-container {
    padding: 2em;
    margin-bottom: 0.1em;
    border-bottom: 1px solid var(--color-outline-gray);
}
.timeline .tweet, .quoted-tweet .tweet {
    padding-top: 0.8em;
    padding-bottom: 0.8em;
}
/* ... */

